<?xml version="1.0"?>
<package format="2">
  <name>seeker</name>
  <version>0.0.0</version>
  <description>Seeker package - When enabled, this package drives a simulated turtlebot towards a ball in gazebo. Built on 3/1 as an interview project for Torc Robotics.</description>
  <maintainer email="hikhan@hmc.edu">Hamzah Khan</maintainer>
  <license>N/A</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
